tests/fixtures/errors/unterminated_string.sysml
package Test {
    attribute name = "hello world;
}
